Laptop screen enabled after booting with lid closed
Before submitting your bug report:
Brief summary of the problem:
When booting docked and with the lid closed, the laptop "eDP" display is still enabled:
# cat /sys/class/drm/card1-eDP-1/enabled
enabled
I don't think this is a regression, I just hadn't noticed it before. Booting the same drive on an Intel laptop with lid closed results in eDP being disabled as it should be.
Hardware description: HP Pavilion Aero Laptop 13-be0xxx/8916, BIOS F.12 04/11/2023
- CPU: AMD Ryzen 7 5800U with Radeon Graphics
- GPU: [AMD/ATI] Cezanne [Radeon Vega Series / Radeon Vega Mobile Series] [1002:1638] (rev c1)
- System Memory: 16GB
- Display(s): laptop screen 2560x1600 and 3 external monitors via USB-C dock
- Type of Display Connection: eDP + USB-C
System information:
- Debian 12
- Custom kernel: v6.9-rc5-42-ge88c4cfcb7b8
- AMD official driver version: N/A
How to reproduce the issue:
- boot laptop docked with lid closed
-
cat /sys/class/drm/card1-eDP-1/enabled
showsenabled
Note that this is some issue with the kernel driver, not desktop:
- boot with "3" in kernel parameters to disable graphical boot
- log in
-
cat /sys/class/drm/card1-eDP-1/enabled
showsenabled